Swagger document updated
