# modules/in-track/config/swagger.yaml
@@ -9,7 +9,7 @@ consumes:
 produces:
 - "application/json"
 paths:
-  /v1/list:
+  /v1/sheets/list:
     get:
       tags:
         - CRUD Operations
@@ -26,7 +26,7 @@ paths:
         200:
           description: Success
           schema:
-            $ref: '#/definitions/InventoryResponse'
+            $ref: '#/definitions/SheetList'
         500:
           description: "Used for a 500 HTTP response - Internal server error"
           schema:
@@ -100,3 +100,23 @@ definitions:
           type: "string"
       minimumInventory:
           type: "integer"
+  SheetList:
+    type: "object"
+    properties:
+      sheets:
+        type: "array"
+        items:
+          $ref: "#/definitions/SheetInfo"
+  SheetInfo:
+    type: "object"
+    properties:
+      sheetId:
+          type: "string"
+      sheetName:
+          type: "string"
+      sheetDate:
+          type: "string"
+      sheetNotes:
+          type: "string"
+      ongoing:
+          type: "string"
